[gd_scene load_steps=8 format=3 uid="uid://nu82ttrlo4if"]

[ext_resource type="Script" uid="uid://csr5yrxrp7pnm" path="res://game/interactables/melee_activator.gd" id="1_cv20n"]
[ext_resource type="AudioStream" uid="uid://cdmweeawyjrgv" path="res://game/interactables/activate.tres" id="2_re2vk"]
[ext_resource type="AudioStream" uid="uid://coxcfk2eh2ne1" path="res://game/interactables/activator_hit.tres" id="3_rj67i"]

[sub_resource type="BoxShape3D" id="BoxShape3D_w1ybp"]
size = Vector3(0.7, 1, 0.7)

[sub_resource type="BoxMesh" id="BoxMesh_w1ybp"]
size = Vector3(1, 0.1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_63vvw"]
size = Vector3(0.8, 0.8, 0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_63vvw"]
albedo_color = Color(1, 0, 0.482353, 1)
emission_enabled = true
emission = Color(1, 0.027451, 0.345098, 1)

[node name="MeleeActivator" type="Node3D"]
script = ExtResource("1_cv20n")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 33

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_w1ybp")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_w1ybp")
skeleton = NodePath("../../Button")

[node name="Button" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Button"]
transform = Transform3D(0.799358, 0, 0, 0, 1.3, 0, 0, 0, 0.799358, 0, 0.4, 0)
mesh = SubResource("BoxMesh_63vvw")

[node name="Activated" type="MeshInstance3D" parent="Button"]
unique_name_in_owner = true
transform = Transform3D(0.838742, 0, 0, 0, 1.36405, 0, 0, 0, 0.838742, 0, 0.4, 0)
visible = false
material_override = SubResource("StandardMaterial3D_63vvw")
mesh = SubResource("BoxMesh_63vvw")

[node name="AudioActivate" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_re2vk")
volume_db = -10.0
bus = &"SFX"

[node name="AudioHit" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_rj67i")
bus = &"SFX"
